--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-HelloWorld! 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Personal Site</title>
+
+    <!-- Bootstrap CSS -->
+    
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css">
+    </head>
+
+<body>
+    <div class="container">
+        <nav class="navbar navbar-default">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="pictures.html">Articles</a></li>
+            </ul>
+        </nav>
+    </div>
+
+</body>
+
+</html>
